--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
@@ -21,6 +20,7 @@
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "reactstrap": "^9.2.2",
+    "sharp": "^0.33.4",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0"
   },
